// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Toast AutoPlacement smoke-test 1`] = `
<cbutton aria-describedby="id-3"
         style="position: absolute; bottom: 4px; right: 4px;"
>
  Hover me
</cbutton>
`;

exports[`components/Toast Default smoke-test 1`] = `
<button class="cmpui_button"
        data-variant="primary"
        data-size="M"
        aria-describedby="id-1"
>
  Hover me
</button>
`;

exports[`components/Toast Flip smoke-test 1`] = `
<button class="cmpui_button"
        data-variant="primary"
        data-size="M"
        aria-describedby="id-2"
        style="position: absolute; bottom: 4px; transform: translateX(-50%);"
>
  Hover me
</button>
`;

exports[`components/Toast MultipleItems smoke-test 1`] = `
<div class="cmpui_icon-button__group">
  <button class="cmpui_icon-button__root"
          aria-selected="false"
          data-size="M"
          data-rounded="false"
          data-border="false"
          aria-describedby="id-4"
  >
    <i class="ti ti-pointer">
    </i>
  </button>
  <button class="cmpui_icon-button__root"
          aria-selected="false"
          data-size="M"
          data-rounded="false"
          data-border="false"
          aria-describedby="id-5"
  >
    <i class="ti ti-typography">
    </i>
  </button>
  <button class="cmpui_icon-button__root"
          aria-selected="false"
          data-size="M"
          data-rounded="false"
          data-border="false"
          aria-describedby="id-6"
  >
    <i class="ti ti-italic">
    </i>
  </button>
</div>
`;
